Made all .html files into files to make it more accessible for users

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Meet our expert team of Registered Social Workers at York Durham Counselling. Kim Sundal, Marnie Teitlebaum, and Jillian Hooper provide compassionate online therapy.">
     <meta name="keywords" content="Kim Sundal, Marnie Teitlebaum, Jillian Hooper, York Durham Counselling Team, Therapists Thornhill">
 
-    <link rel="icon" href="images/YD-icon.png">
+    <link rel="icon" href="../images/YD-icon.png">
 
-    <title>Abous Us | York Durham Counselling</title>
+    <title>About Us | York Durham Counselling</title>
     
-    <link rel="stylesheet" href="css/aboutus.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="about-us.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
 
     <script type="application/ld+json">
     {
@@ -65,17 +65,17 @@
     </div>
 
     <nav class="menu menu-slide">
-        <a class="nav-option" href="index.html">Home</a>
-        <a class="nav-option" href="ourmission.html">Our Mission</a>
+        <a class="nav-option" href="../index.html">Home</a>
+        <a class="nav-option" href="../our-mission/index.html">Our Mission</a>
 
         <div class="toggle-position">
-            <a class="nav-option chosen-option" href="aboutus.html">About Us</a>
+            <a class="nav-option chosen-option" href="../about-us/index.html">About Us</a>
             <div class="slide-toggle" type="button"></div>
         </div>
-        
-        <a class="nav-option" href="services.html">Therapy Services</a>
-        <a class="nav-option" href="resources.html">Mental Health Resources</a>
-        <a class="nav-option" href="prices.html">Session Prices</a>
+
+        <a class="nav-option" href="../therapy-services/index.html">Therapy Services</a>
+        <a class="nav-option" href="../mental-health-resources/index.html">Mental Health Resources</a>
+        <a class="nav-option" href="../session-prices/index.html">Session Prices</a>
     </nav>
 
     <h1 class="team-heading">Meet The Team</h1>
@@ -85,7 +85,7 @@
         <tr class="team-row">
         <td>
             <div class="team-card">
-                <img class="team-photo" src="images/Kim.jpg" alt="Kim">
+                <img class="team-photo" src="../images/Kim.jpg" alt="Kim">
                 <div class="team-body">
                     <h3 class="team-name">Kim Sundal</h3>
                     <h2 class="team-title">MSW, RSW</h2>
@@ -104,7 +104,7 @@
 
         <td>
             <div class="team-card">
-                <img class="team-photo" src="images/Marnie.jpg" alt="Marnie">
+                <img class="team-photo" src="../images/Marnie.jpg" alt="Marnie">
                 <div class="team-body">
                     <h3 class="team-name">Marnie Teitlebaum</h3>
                     <h2 class="team-title">MSW, RSW</h2>
@@ -123,7 +123,7 @@
 
         <td>
             <div class="team-card">
-                <img class="team-photo" src="images/Jillian.jpg" alt="Jillian">
+                <img class="team-photo" src="../images/Jillian.jpg" alt="Jillian">
                 <div class="team-body">
                     <h3 class="team-name">Jillian Hooper</h3>
                     <h2 class="team-title">MSW, RSW</h2>
@@ -177,17 +177,17 @@
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
                                     <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                        <img class="icon-image" src="../images/email-icon.png" alt="Email">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
-                                        <img class="icon-image" src="images/instagram-icon.png" alt="Instagram">
+                                        <img class="icon-image" src="../images/instagram-icon.png" alt="Instagram">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.facebook.com/profile.php?id=61573411048420" target="_blank"> 
-                                        <img class="icon-image" src="images/facebook-icon.png" alt="Facebook">
+                                        <img class="icon-image" src="../images/facebook-icon.png" alt="Facebook">
                                     </a>
                                 </td>
                             </tr>
@@ -240,6 +240,6 @@
     </table>
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
