--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <title>Therapy & Counselling | York Durham Counselling</title>
 
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 
     <script type="application/ld+json">
     {
@@ -51,11 +51,11 @@
             <button class="slide-toggle" type="button"></button>
         </div>
 
-        <a class="nav-option" href="ourmission.html">Our Mission</a>
-        <a class="nav-option" href="aboutus.html">About Us</a>
-        <a class="nav-option" href="services.html">Therapy Services</a>
-        <a class="nav-option" href="resources.html">Mental Health Resources</a>
-        <a class="nav-option" href="prices.html">Session Prices</a>
+        <a class="nav-option" href="our-mission/index.html">Our Mission</a>
+        <a class="nav-option" href="about-us/index.html">About Us</a>
+        <a class="nav-option" href="therapy-services/index.html">Therapy Services</a>
+        <a class="nav-option" href="mental-health-resources/index.html">Mental Health Resources</a>
+        <a class="nav-option" href="session-prices/index.html">Session Prices</a>
     </div>
 
     <table class="section-table" border="1" width="100%" cellpadding="20" cellspacing="0">
