--- a/mental-health-resources/index.html
+++ b/mental-health-resources/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Access free 24/7 mental health resources and crisis support in Canada. York Durham Counselling provides tools like Kids Help Phone, Smiling Mind, and the 9-8-8 Helpline.">
     <meta name="keywords" content="Mental Health Resources, Crisis Support Canada, 988 Helpline, Kids Help Phone, CBT Apps, York Durham Counselling">
 
-    <link rel="icon" href="images/YD-icon.png">
+    <link rel="icon" href="../images/YD-icon.png">
 
     <title>Mental Health Resources | York Durham Counselling</title>
-    <link rel="stylesheet" href="css/resources.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="mental-health-resources.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
 
     <script type="application/ld+json">
     {
@@ -46,17 +46,17 @@
     </div>
 
     <div class="menu menu-slide">
-        <a class="nav-option" href="index.html">Home</a>
-        <a class="nav-option" href="ourmission.html">Our Mission</a>
-        <a class="nav-option" href="aboutus.html">About Us</a>
-        <a class="nav-option" href="services.html">Therapy Services</a>
+        <a class="nav-option" href="../index.html">Home</a>
+        <a class="nav-option" href="../our-mission/index.html">Our Mission</a>
+        <a class="nav-option" href="../about-us/index.html">About Us</a>
+        <a class="nav-option" href="../therapy-services/index.html">Therapy Services</a>
 
         <div class="toggle-position">
-            <a class="nav-option chosen-option" href="resources.html">Mental Health Resources</a>
+            <a class="nav-option chosen-option" href="../mental-health-resources/index.html">Mental Health Resources</a>
             <div class="slide-toggle" type="button"></div>
         </div>
-        
-        <a class="nav-option" href="prices.html">Session Prices</a>
+
+        <a class="nav-option" href="../session-prices/index.html">Session Prices</a>
     </div>
 
     <h1 class="mh-resources-heading">Mental Health Resources</h1>
@@ -67,7 +67,7 @@
         <tr class="mh-resource-row">
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/kids-help-phone.jpg" alt="Kids Help Phone" class="mh-resource-icon">
+                    <img src="../images/kids-help-phone.jpg" alt="Kids Help Phone" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Kids Help Phone</h3>
                     <p class="mh-resource-text">24/7 e-mental health service for young people, offering free, confidential support by phone, text, and online resources.</p>
                     <a class="visit-link" href="https://kidshelpphone.ca/" target="_blank" rel="noopener">Visit Kids Help Phone</a>
@@ -76,7 +76,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/smiling-mind.jpg" alt="Smiling Mind" class="mh-resource-icon">
+                    <img src="../images/smiling-mind.jpg" alt="Smiling Mind" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Smiling Mind</h3>
                     <p class="mh-resource-text">A mindfulness app with dozens of guided practices designed by psychologists for both adults and children.</p>
                     <a class="visit-link" href="https://www.smilingmind.com.au/" target="_blank" rel="noopener">Visit Smiling Mind</a>
@@ -85,7 +85,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/9-8-8.jpg" alt="9-8-8 Suicide Crisis Helpline" class="mh-resource-icon">
+                    <img src="../images/9-8-8.jpg" alt="9-8-8 Suicide Crisis Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">9-8-8 Suicide Crisis Helpline</h3>
                     <p class="mh-resource-text">Available 24/7 across Canada to support people thinking about suicide or worried about someone else.</p>
                     <a class="visit-link" href="https://988.ca/" target="_blank" rel="noopener">Visit 9-8-8 Helpline</a>
@@ -96,7 +96,7 @@
         <tr class="mh-resource-row">
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/mind-shift.jpg" alt="MindShift CBT" class="mh-resource-icon">
+                    <img src="../images/mind-shift.jpg" alt="MindShift CBT" class="mh-resource-icon">
                     <h3 class="mh-resource-title">MindShift CBT</h3>
                     <p class="mh-resource-text">A self-help app based on CBT strategies to help manage worry, panic, perfectionism, and social anxiety.</p>
                     <a class="visit-link" href="https://mindshiftcbt.com/" target="_blank" rel="noopener">Visit MindShift CBT</a>
@@ -105,7 +105,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/hope-for-wellness.jpg" alt="Hope for Wellness Helpline" class="mh-resource-icon">
+                    <img src="../images/hope-for-wellness.jpg" alt="Hope for Wellness Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Hope for Wellness Helpline</h3>
                     <p class="mh-resource-text">Phone and online chat support available to all Indigenous peoples across Canada, with culturally competent counsellors.</p> 
                     <a class="visit-link" href="https://www.hopeforwellness.ca/" target="_blank" rel="noopener">Visit Hope for Wellness</a>
@@ -114,7 +114,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/black-youth-helpline.jpg" alt="Black Youth Helpline" class="mh-resource-icon">
+                    <img src="../images/black-youth-helpline.jpg" alt="Black Youth Helpline" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Black Youth Helpline</h3>
                     <p class="mh-resource-text">A multicultural helpline providing support for Black youth, families, and schools through counselling and referrals.</p>
                     <a class="visit-link" href="https://blackyouth.ca/" target="_blank" rel="noopener">Visit Black Youth Helpline</a>
@@ -125,7 +125,7 @@
         <tr class="mh-resource-row">
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/LGBT-youth-line.jpg" alt="LGBT Youth Line" class="mh-resource-icon">
+                    <img src="../images/LGBT-youth-line.jpg" alt="LGBT Youth Line" class="mh-resource-icon">
                     <h3 class="mh-resource-title">LGBT Youth Line</h3>
                     <p class="mh-resource-text">Canada’s peer-supported helpline for 2SLGBTQ+ youth, offering free, confidential emotional support by phone, text, chat, and online resources.</p>
                     <a class="visit-link" href="https://youthline.ca/" target="_blank" rel="noopener">Visit LGBT Youth Line</a>
@@ -134,7 +134,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/310-cope.jpg" alt="310 Cope" class="mh-resource-icon">
+                    <img src="../images/310-cope.jpg" alt="310 Cope" class="mh-resource-icon">
                     <h3 class="mh-resource-title">310 Cope</h3>
                     <p class="mh-resource-text">Toronto’s 24/7 emotional support line, providing free, confidential crisis and distress support by phone for individuals experiencing emotional difficulty.</p>
                     <a class="visit-link" href="https://yssn.ca/crisis-services/310-cope/" target="_blank" rel="noopener">Visit 310 Cope</a>
@@ -143,7 +143,7 @@
 
             <td class="mh-resource-cell">
                 <div class="mh-resource-card">
-                    <img src="images/anxiety-canada.jpg" alt="Anxiety Canada" class="mh-resource-icon">
+                    <img src="../images/anxiety-canada.jpg" alt="Anxiety Canada" class="mh-resource-icon">
                     <h3 class="mh-resource-title">Anxiety Canada</h3>
                     <p class="mh-resource-text">Canada’s national anxiety support organization, offering free, evidence-based resources, self-help tools, and programs to help individuals understand and manage anxiety.</p>
                     <a class="visit-link" href="https://www.anxietycanada.com/" target="_blank" rel="noopener">Visit Anxiety Canada</a>
@@ -187,17 +187,17 @@
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
                                     <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                        <img class="icon-image" src="../images/email-icon.png" alt="Email">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
-                                        <img class="icon-image" src="images/instagram-icon.png" alt="Instagram">
+                                        <img class="icon-image" src="../images/instagram-icon.png" alt="Instagram">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.facebook.com/profile.php?id=61573411048420" target="_blank"> 
-                                        <img class="icon-image" src="images/facebook-icon.png" alt="Facebook">
+                                        <img class="icon-image" src="../images/facebook-icon.png" alt="Facebook">
                                     </a>
                                 </td>
                             </tr>
@@ -250,6 +250,6 @@
     </table>
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
