--- a/session-prices/index.html
+++ b/session-prices/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about the mission of York Durham Counselling: providing expert, compassionate online therapy with over 20 years of clinical experience.">
-
-    <link rel="icon" href="images/YD-icon.png">
-
-    <title>Our Mission | York Durham Counselling</title>
     
-    <link rel="stylesheet" href="css/ourmission.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <meta name="description" content="View session rates for York Durham Counselling. Transparent pricing for individual therapy, family counselling, and CBT programs in Thornhill, ON.">
+    <meta name="keywords" content="Therapy prices Thornhill, counselling rates Ontario, affordable therapy, individual counselling cost">
+
+    <link rel="icon" href="../images/YD-icon.png">
+
+    <title>Session Prices | York Durham Counselling</title>
+    <link rel="stylesheet" href="session-prices.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
 
     <script type="application/ld+json">
     {
@@ -18,6 +19,7 @@
       "@type": "MedicalBusiness",
       "name": "York Durham Counselling",
       "medicalSpecialty": "Psychotherapy",
+      "url": "https://yorkdurhamcounselling.site",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "6D-7398 Yonge Street, Unit #2061",
@@ -27,7 +29,26 @@
         "addressCountry": "CA"
       },
       "telephone": "+1-289-588-3559",
-      "url": "https://yorkdurhamcounselling.site"
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Individual Therapy" },
+          "price": "165.00",
+          "priceCurrency": "CAD"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Family Counselling" },
+          "price": "190.00",
+          "priceCurrency": "CAD"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": { "@type": "Service", "name": "Cognitive Behavioural Therapy" },
+          "price": "165.00",
+          "priceCurrency": "CAD"
+        }
+      ]
     }
     </script>
 </head>
@@ -44,84 +65,49 @@
         <div class="bubble bubble-small"></div>
     </div>
 
-    <nav class="menu menu-slide">
-        <a class="nav-option" href="index.html">Home</a>
-
+    <div class="menu menu-slide">
+        <a class="nav-option" href="../index.html">Home</a>
+        <a class="nav-option" href="../our-mission/index.html">Our Mission</a>
+        <a class="nav-option" href="../about-us/index.html">About Us</a>
+        <a class="nav-option" href="../therapy-services/index.html">Therapy Services</a>
+        <a class="nav-option" href="../mental-health-resources/index.html">Mental Health Resources</a>
         <div class="toggle-position">
-            <a class="nav-option chosen-option" href="ourmission.html">Our Mission</a>
+            <a class="nav-option chosen-option" href="../session-prices/index.html">Session Prices</a>
             <div class="slide-toggle" type="button"></div>
         </div>
+    </div>
 
-        <a class="nav-option" href="aboutus.html">About Us</a>
-        <a class="nav-option" href="services.html">Therapy Services</a>
-        <a class="nav-option" href="resources.html">Mental Health Resources</a>
-        <a class="nav-option" href="prices.html">Session Prices</a>
-    </nav>
+    <h1 class="pricing-heading">Session Prices</h1>
 
-    <table class="section-table mission-table fix-gap" cellpadding="0" cellspacing="0">
+    <table class="section-table pricing-table" width="100%" cellpadding="0" cellspacing="0">
     <tbody>
-        <tr class="mission-row">
-            <td class="mission-text-cell">
-                <h2 class="mission-heading">Our Mission</h2>
-
-                <p class="mission-intro"> Welcome to <strong>York Durham Counselling</strong>, where:</p>
-                <p class="mission-quote">“Compassionate client care meets expert therapy.”</p>
-                <p class="mission-body">York Durham Counselling was created upon recognizing the barriers within mental health services, including long wait lists for service, insufficient resources, and limited effectiveness. We offer a level of expertise and experience that sets us apart from less experienced or newly trained therapists.</p>
-                <p class="mission-body">All of the therapists at York Durham Counselling are driven by a commitment to deliver the highest quality of therapy, ensuring that every client receives the care they need and deserve.</p>
+        <tr class="pricing-row">
+            <td class="pricing-card-cell">
+                <div class="pricing-card">
+                    <div class="pricing-badge">1</div>
+                    <h3 class="pricing-title">Individual Therapy Session</h3>
+                    <div class="pricing-price">$165</div>
+                    <div class="pricing-subtext">50 Minute Session</div>
+                </div>
             </td>
 
-            <td class="mission-image-cell" align="center">
-                <img class="section-image mission-image" src="images/counselling.jpg" alt="Counselling illustration">
+             <td class="pricing-card-cell">
+                <div class="pricing-card">
+                    <div class="pricing-badge">2</div>
+                    <h3 class="pricing-title">Cognitive Behavioural Therapy Program</h3>
+                    <div class="pricing-price">$165 per 50 minute session</div>
+                    <div class="pricing-subtext">or</div>
+                    <div class="pricing-subtext">$1500 for block of 10 sessions</div>
+                </div>
             </td>
-        </tr>
-    </tbody>
-    </table>
 
-    <table class="section-table choose-table" width="100%" cellpadding="0" cellspacing="0">
-    <tbody>
-        <tr class="choose-row">
-            <td class="choose-text-cell">        
-                <h2 class="choose-heading">Why Choose York Durham Counselling?</h2>
-
-                <table class="choose-points-table">
-                <tbody>
-                    <tr>
-                        <td class="choose-point">
-                            <div class="choose-card">
-                                <h3 class="choose-title">Expertise</h3>
-                                <p class="choose-body">All therapists at York Durham Counselling have a minimum of 20 years of direct clinical experience and remain current with advancements in their field.</p>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="choose-point">
-                            <div class="choose-card">
-                                <h3 class="choose-title">Compassion</h3>
-                                <p class="choose-body">Each therapist approaches every client with empathy and understanding, creating a safe, supportive environment for healing and growth.</p>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="choose-point">
-                            <div class="choose-card">
-                                <h3 class="choose-title">Client-Centered Approach</h3>
-                                <p class="choose-body">Therapy is tailored to each individual’s needs, prioritizing personalized care that supports meaningful and lasting change.</p>
-                            </div>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="choose-point">
-                            <div class="choose-card">
-                                <h3 class="choose-title">Online Sessions</h3>
-                                <p class="choose-body">Flexible online counselling provides accessible, stress-reduced care from home, eliminating travel time and offering scheduling convenience.</p>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-                </table>
+            <td class="pricing-card-cell">
+                <div class="pricing-card">
+                    <div class="pricing-badge">3</div>
+                    <h3 class="pricing-title">Family Counselling Session</h3>
+                    <div class="pricing-price">$190</div>
+                    <div class="pricing-subtext">1 hour session</div>
+                </div>
             </td>
         </tr>
     </tbody>
@@ -161,17 +147,17 @@
                             <tr class="contact-icons-row">
                                 <td class="contact-info icon-cell">
                                     <a href="mailto:yorkdurhamcounselling@gmail.com" target="_blank">
-                                        <img class="icon-image" src="images/email-icon.png" alt="Email">
+                                        <img class="icon-image" src="../images/email-icon.png" alt="Email">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.instagram.com/yorkdurhamcounselling/" target="_blank">
-                                        <img class="icon-image" src="images/instagram-icon.png" alt="Instagram">
+                                        <img class="icon-image" src="../images/instagram-icon.png" alt="Instagram">
                                     </a>
                                 </td>
                                 <td class="contact-info icon-cell">
                                     <a href="https://www.facebook.com/profile.php?id=61573411048420" target="_blank"> 
-                                        <img class="icon-image" src="images/facebook-icon.png" alt="Facebook">
+                                        <img class="icon-image" src="../images/facebook-icon.png" alt="Facebook">
                                     </a>
                                 </td>
                             </tr>
@@ -204,7 +190,7 @@
                                     <input type="text" id="subject" name="subject"></div>
                                 <div class="form-field full">
                                     <label for="message">Message</label>
-                                    <textarea id="message" name="message" rows="3"></textarea>
+                                    <textarea id="message" name="message"></textarea>
                                 </div>
                             </div>
                             <button class="submit-btn" type="submit">Submit</button>
@@ -224,6 +210,6 @@
     </table>
 
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
